--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Francisco Carranza <francar94@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "test:integration": "NODE_ENV=test node_modules/.bin/mocha --exit -r node_modules/ts-node/register src/**/*.spec.ts"
   },
   "dependencies": {
     "better-sqlite3": "^7.6.2",
@@ -20,7 +21,9 @@
     "zod": "^3.17.10"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.1",
     "@types/knex": "^0.16.1",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^18.6.3",
     "chai": "^4.3.6",
     "mocha": "^10.0.0"
