--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "test:integration": "NODE_ENV=test node_modules/.bin/mocha --exit -r node_modules/ts-node/register src/**/*.spec.ts"
+    "test:integration": "NODE_ENV=test node_modules/.bin/mocha --exit -r node_modules/ts-node/register src/**/*.spec.ts",
+    "build": "rimraf ./dist && tsc"
   },
   "dependencies": {
     "better-sqlite3": "^7.6.2",
@@ -26,6 +27,7 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.6.3",
     "chai": "^4.3.6",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "rimraf": "^3.0.2"
   }
 }
