--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,15 +9,18 @@ jobs:
         node-version: [16.x]
     steps:
       - uses: actions/checkout@v3
+
       - uses: borales/actions-yarn@v3.0.0
         with:
           cmd: install # will run `yarn install` command
+
       - uses: borales/actions-yarn@v3.0.0
         with:
           cmd: build # will run `yarn build` command
-      - uses: borales/actions-yarn@v3.0.0
-        with:
-          cmd: NODE_ENV=test ./node_modules/.bin/knex migrate:up
+
+      - name: Run migrations
+        run: NODE_ENV=test ./node_modules/.bin/knex migrate:up
+
       - uses: borales/actions-yarn@v3.0.0
         with:
           cmd: test # will run `yarn test` command
