--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "zod": "^3.17.10"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@types/chai": "^4.3.1",
     "@types/knex": "^0.16.1",
     "@types/mocha": "^9.1.1",
