CLI profile support

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "tsc": "tsc",
     "test": "NODE_ENV=test node_modules/.bin/mocha --exit -r node_modules/ts-node/register src/**/*.spec.ts",
-    "build": "rimraf ./dist && tsc"
+    "build": "rimraf ./dist && tsc",
+    "cli": "ts-node src/infra/ui/cli/index.ts --"
   },
   "dependencies": {
     "better-sqlite3": "^7.6.2",
