--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "commander": "^9.4.0",
     "dotenv": "^16.0.1",
     "eslint": "^8.22.0",
+    "fast-csv": "^4.3.6",
     "knex": "^2.2.0",
     "pino": "^8.3.1",
     "pino-pretty": "^8.1.0",
