--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "better-sqlite3": "^7.6.2",
     "commander": "^9.4.0",
     "dotenv": "^16.0.1",
+    "fast-csv": "^4.3.6",
     "knex": "^2.2.0",
     "pino": "^8.3.1",
     "pino-pretty": "^8.1.0",
